apps/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: ctrlline-serial-sa
      containers:
        - name: backend
          image: 980921712223.dkr.ecr.ap-northeast-2.amazonaws.com/ctrlline-backend:main-42ccfb2b10b766e396bbd385095596a74dcbfdef
          ports:
            - name: http
              containerPort: 8080
          
          args:
            - "--spring.profiles.active=prod"
          
          volumeMounts:
            - name: spring-prod-config-volume
              mountPath: /config/application-prod.yml
              subPath: application-prod.yml
          
      volumes:
        - name: spring-prod-config-volume
          configMap:
            name: spring-prod-config
